--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
         max-width: 700px;
         margin: var(--header-height) 1rem 1rem 1rem;
         width: 75%;
+        height: 200vh;
       }
       aside {
         width: 25%;
