--- a/public/tabs.html
+++ b/public/tabs.html
@@ -79,6 +79,7 @@
       position: relative;
       width: 200px;
       height: 200px;
+      cursor: pointer;
     }
     
     .pin-container:hover {
