--- a/public/boilerplate.html
+++ b/public/boilerplate.html
@@ -9,6 +9,8 @@
     <style amp-custom>
       :root {
         --header-height: 56px;
+        --color-primary: #005af0;
+        --color-primary-text: white;
       }
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -16,18 +18,18 @@
       header {
         position: fixed;
         top: 0;
-        left: 0;
-        right: 0;
+        width: 100%;
         height: var(--header-height);
-        line-height: var(--header-height);
         text-align: center;
         z-index: 1000;
-        color: #fafafc;
-        font-weight: 700;
-        font-size: 1.25rem;
-        background: #005af0;
+        background: var(--color-primary);
+        color: var(--color-primary-text);
         box-shadow: 0 2px 10px 0 rgba(0,0,0,.07);
         overflow: hidden;
+      }
+      header h1 {
+          margin: 0;
+          line-height: var(--header-height);
       }
     </style>
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -36,7 +38,7 @@
   </head>
   <body>
     <header>
-      AMPConf Live!
+      <h1>AMPConf Live!</h1>
     </header>
   </body>
 </html>
