--- a/public/tabs.html
+++ b/public/tabs.html
@@ -11,6 +11,8 @@
     <style amp-custom>
       :root {
         --header-height: 56px;
+        --color-primary: #005af0;
+        --color-primary-text: white;
       }
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -18,16 +20,12 @@
       header {
         position: fixed;
         top: 0;
-        left: 0;
-        right: 0;
+        width: 100%;
         height: var(--header-height);
         line-height: var(--header-height);
         text-align: center;
         z-index: 1000;
-        color: #fafafc;
-        font-weight: 700;
-        font-size: 1.25rem;
-        background: #005af0;
+        
         box-shadow: 0 2px 10px 0 rgba(0,0,0,.07);
         overflow: hidden;
       }
@@ -39,9 +37,10 @@
       #toolbar {
           position: fixed;
           bottom: 0;
+          width: 100%;
           height: var(--header-height);
           display: flex;
-          width: 100%;
+          
           background: #005af0;
           color: white;
       }
@@ -64,7 +63,7 @@
   </head>
   <body>
     <header>
-      AMPConf Live!
+      <h1>[[title]]</h1>
     </header>
     <main>
         <section [hidden]="tab > 0">Schedule</section>
