--- a/public/tabs.html
+++ b/public/tabs.html
@@ -6,6 +6,7 @@
     <meta name="description" content="The AMPConf website - build live @AMPConf!">
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
     <script async custom-element="amp-selector" src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"></script>
+    <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <style amp-custom>
       :root {
@@ -30,17 +31,11 @@
         box-shadow: 0 2px 10px 0 rgba(0,0,0,.07);
         overflow: hidden;
       }
-      #tabs {
+      main {
         padding: var(--header-height) 0;
         height: 100vh;
       }
-      #tabs > * {
-          display: none;
-          outline: none;
-      }
-      #tabs [selected] {
-          display: block;
-      }
+     
       #toolbar {
           position: fixed;
           bottom: 0;
@@ -60,7 +55,7 @@
         text-transform: uppercase;
       }
       #toolbar [selected] {
-          opacity: 1;
+        opacity: 1;
       }
     </style>
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -71,12 +66,12 @@
     <header>
       AMPConf Live!
     </header>
-      <amp-selector id="tabs">
-        <section id="schedule" option selected>Schedule</section>
-        <section id="twitter" option>Tweets</section>
-        <section id="photos" option>Photos</section>
-      </amp-selector>
-    <amp-selector id="toolbar" on="select:tabs.toggle(index=event.targetOption, value=true)">
+    <main>
+        <section [hidden]="tab > 0">Schedule</section>
+        <section [hidden]="tab != 1" hidden>Tweets</section>
+        <section [hidden]="tab != 2" hidden>Photos</section>
+    </main>
+    <amp-selector id="toolbar" on="select:AMP.setState({tab: event.targetOption})">
         <div option=0 selected>Schedule</div>
         <div option=1>Twitter</div>
         <div option=2>Photos</div>
