--- a/public/index.html
+++ b/public/index.html
@@ -1,97 +1,72 @@
 <!doctype html>
 <html ⚡ lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1">
-    <meta name="description" content="The AMPConf website - build live @AMPConf!">
-    <script async custom-element="amp-fx-collection" src="https://cdn.ampproject.org/v0/amp-fx-collection-0.1.js"></script>    
-    <script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
-    <script async custom-element="amp-live-list" src="https://cdn.ampproject.org/v0/amp-live-list-0.1.js"></script>
-    
-    <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <style amp-custom>
       :root {
         --header-height: 56px;
+        --color-primary: #005af0;
+        --color-primary-text: white;
+        --color-accent: #ffdc00;
+        --color-bg-light: #f6f8fa;
       }
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        background: #ebebf0;
-        display: flex;
-        justify-content: center;
-      }
-      header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        height: var(--header-height);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 1000;
-        color: #fafafc;
-        font-weight: 700;
-        font-size: 1.25rem;
-        background: #005af0;
-        box-shadow: 0 2px 10px 0 rgba(0,0,0,.07);
-        overflow: hidden;
       }
       main {
-        max-width: 700px;
-        margin: var(--header-height) 1rem 1rem 1rem;
-        width: 75%;
-        height: 200vh;
+        padding: var(--header-height) .5rem;
       }
-      aside {
-        width: 25%;
-        margin: var(--header-height) 1rem 1rem 1rem;
+      .bottom {
+        bottom: 0;
       }
-      .tweet {
-        display: block;
-        background: #f4f4f4;
-        padding: 1rem;
-        border-radius: 4px;
-        margin: 0.5rem 0;
+      .top {
+        top: 0;
+      }
+      .nav-bar h1 {
+        margin: 0;
+        text-align: center;
+      }
+      .nav-bar {
+        background: var(--color-primary);
+        box-shadow: 0 2px 10px 0 rgba(0,0,0,.07);
+        color: var(--color-primary-text);
+        height: var(--header-height);
+        line-height: var(--header-height);
+        overflow: hidden;
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
+      }
+      .card {
+        background: var(--color-bg-light);
+        padding: .5rem;
+        margin: .5rem 0;
+        border-radius: 8px;
       }
     </style>
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
- 
     <link rel="canonical" href=".">
     <title>AMPConf 2019 - Live!</title>
   </head>
   <body>
-    <header  amp-fx="float-in-top">
-      AMPConf Live!
+    <header class="nav-bar top">
+      <h1>AMPConf 2019 - Live!</h1>
     </header>
-    <amp-bind-macro id="asf"
-                    arguments="adsf"
-                    expression="">
-    </amp-bind-macro>
     <main>
-      <h2>Schedule</h2>
-      Here comes the content...
+      [[#agenda.days]]
+      <div id="[[id]]">
+      <h2>[[title]]</h2>
+      [[#sessions]]
+      <div class="card">
+        <strong><time>[[time]]</time> [[title]]</strong>
+        <div>[[{ speakers }]]</div>
+        
+      </div>
+      [[/sessions]]
+      </div>
+      [[/agenda.days]]
     </main>
-    <aside>
-      <h2>What people are saying:</h2>
-      <amp-live-list layout="container"
-        id="tweets"
-        data-poll-interval="15000"
-        data-max-items-per-page="10">
-        <button update on="tap:tweets.update">You have updates</button>
-        <div items>
-          <div id="tweet-list"
-            data-sort-time="1234567"
-            data-update-time="[[tweets.timestamp]]">
-              [% for tweet in tweets %] 
-              <div class="tweet">
-                <strong class="tweet-author"></strong>[[tweet.user.screen_name]]:</span>
-                <span class="tweet-text"></span>[[tweet.text|safe]]:</span>
-              </div>
-              [% endfor %] 
-          </div>
-        </div>
-      </amp-live-list> 
-    </aside>
   </body>
 </html>
