--- a/public/start.html
+++ b/public/start.html
@@ -21,6 +21,15 @@
       main {
         padding: var(--header-height) .5rem;
       }
+      button {
+        background: var(--color-accent);
+        font-weight: 700;
+        padding: 8px;
+        text-transform: uppercase;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+      }
       .bottom {
         bottom: 0;
       }
